--- a/fix-me/router/pom.xml
+++ b/fix-me/router/pom.xml
@@ -8,6 +8,13 @@
   </parent>
   <artifactId>router</artifactId>
   <packaging>jar</packaging>
+  <dependencies>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.17</version>
+		</dependency>
+	</dependencies>
   <name>router</name>
 	<build>
 		<plugins>
@@ -40,7 +47,7 @@
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<mainClass>app.MainServer</mainClass>
+							<mainClass>app.Server</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
