--- a/fix-me/router/pom.xml
+++ b/fix-me/router/pom.xml
@@ -40,7 +40,7 @@
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<mainClass>app.MainServer</mainClass>
+							<mainClass>app.Server</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
