--- a/fix-me/broker/pom.xml
+++ b/fix-me/broker/pom.xml
@@ -8,6 +8,7 @@
 			<version>4.12</version>
 			<scope>compile</scope>
 		</dependency>
+
 	</dependencies>
 	<parent>
     <groupId>com.robintegg.blog</groupId>
@@ -18,7 +19,18 @@
   <packaging>jar</packaging>
   <name>broker</name>
 	<build>
+		<testSourceDirectory>target</testSourceDirectory>
 		<plugins>
+			<plugin>
+			        <groupId>org.apache.maven.plugins</groupId>
+			        <artifactId>maven-surefire-plugin</artifactId>
+			        <version>2.4.3</version>
+			        <configuration>
+			                <includes>
+			                        <include>${basedir}/broker/src/main/java/test/**</include>
+			                </includes>
+			        </configuration>
+			</plugin>
 			<plugin>
 				<!-- Build an executable JAR -->
 				<groupId>org.apache.maven.plugins</groupId>
